--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				</section>
 
 				<section class="self-introduction">
-					<h2>自己紹介</h2>
 					<section>
+						<h2>自己紹介</h2>
 						<ul style="position:relative; top:1em;margin: 1em; padding: 0em;">
 							<li>名前:&nbsp;&nbsp;小川 桜輝 (おがわ こうき)</li>
 							<li>所属:&nbsp;&nbsp;長崎大学工学部<span style="color:yellow">電気電子工学</span>コース</li>
@@ -38,9 +38,17 @@
 						</ul>
 					</section>
 					<section>
+						<img src="images/tatikoma.png">
+					</section>
+					<section>
+						<img src="images/muse.png">
+					</section>
+					<!--
+					<section>
 						<img src="images/tatikoma.png" alt="tatikoma" title="tatikoma" width="600" style="position:relative; right:6em; top:4em;">
 						<img src="images/muse.png" alt="dtm" title="dtm" width="600" style="position:relative; left:5em; bottom:2em;">
 					</section>
+					-->
 					<section>
 						<h3>早速始めていきましょう!</h3>
 					</section>
@@ -104,7 +112,7 @@
 					<section>
 						<p>好きなUIを選びNext</p>
 						<p class="kome">個人的には黒の方が目に優しく感じる</p>
-						<img src="images/6.png" width="700px">
+						<img src="images/6.png" width="600px">
 					</section>
 					<section>
 						<p>そのままNext</p>
@@ -146,16 +154,16 @@
 					</section>
 					<section>
 						<p>Empty Activity選択、Next</p>
-						<img src="images/12.png" width="700px">
+						<img src="images/12.png" width="600px">
 					</section>
 					<section>
 						<p>Nameをtest001, LanguageをKotlinに</p>
 						<p>Finishをクリック</p>
-						<img src="images/13.png" width="700px">
+						<img src="images/13.png" width="600px">
 					</section>
 					<section>
 						<p>プロジェクトが作られるまで少し待ちます</p>
-						<img src="images/14.png" width="700px">
+						<img src="images/14.png" width="400px">
 					</section>
 					<section>
 						<h2>いくつか設定をしていきます</h2>
@@ -200,7 +208,7 @@
 						</ul>
 					</section>
 					<section>
-						<img src="images/16.png">
+						<img src="images/16.png" width="70%">
 					</section>
 					<section>
 						<h3>MainActivity.ktにコードを書く</h3>
@@ -244,22 +252,21 @@
 						<h3>実際に文法を見ていきましょう</h3>
 					</section>
 					<section>
+						<p>変数、定数</p>
 						<div class="flex">
 							<pre><code>
-								//Kotlin
-								//変数の宣言と値の代入
-								var 変数名: 型 = 値
+								//変数
+								var 変数名:型=値
 
-								//定数の宣言と値の代入
-								val 定数名: 型 = 値
+								//定数
+								val 定数名:型=値
 							</code></pre>
 							<pre><code>
-								//具体例
-								//変数の宣言と値の代入
-								var a: Int = 1
+								//変数
+								var a:Int=1
 
-								//定数の宣言と値の代入
-								val a: Int = 1
+								//定数
+								val a:Int=1
 							</code></pre>
 						</div>
 						<p style="font-size:30px">開発ではvalを使うことが多い</p>
@@ -268,19 +275,16 @@
 						<p style="font-size:30px">Kotlinは文の最後にセミコロン[;]がいらない</p>
 					</section>
 					<section>
+						<p>if文</p>
 						<div class="flex">
-						<pre><code>
-							//Kotlin
-							//if文
+						<pre class="mycode"><code>
 							if(条件式){
 								処理1
 							}else{
 								処理2
 							}
 						</code></pre>
-						<pre><code>
-							//具体例
-							//if文
+						<pre class="mycode"><code>
 							if(a==0){
 								println("false")
 							}else{
@@ -301,7 +305,7 @@
 						<p>最近の言語ではifを式として扱えることが多い</p>
 					</section>
 					<section>
-						<p>swichの代わりのWhen</p>
+						<p>switchの代わりのWhen</p>
 						<pre><code>
 							when(a){
 								1 -> {
@@ -318,11 +322,9 @@
 						<p>こちらも式として扱える</p>
 					</section>
 					<section>
-						<div class="flex">
+						<p>for文</p>
 							<pre><code>
-								//Kotlin
-								//for文
-								for(変数名 in はじめの数..終わりの数){
+								for(変数 in 始..終){
 									処理
 								}
 							</code></pre>
@@ -331,30 +333,23 @@
 									println("${i}")
 								}
 							</code></pre>
-						</div>
 					</section>
 					<section>
-						<div class="flex">
+						<p>メソッド(関数)</p>
 							<pre><code>
-								//メソッド(関数)
-								fun メソッド名(仮引数):返り値の型{
+								fun メソッド(仮引数):返り値型{
 									処理
 								}
 							</code></pre>
 							<pre><code>
-								//具体例
 								fun square(width: Int,height: Int):Int {
 									return width*height
 								}
 							</code></pre>
-					</div>
-						<p>クラス内にある関数をメソッドと言います</p>
 						<p>Unit型(Cで言うvoid)は返り値の型を省略可</p>
 					</section>
 					<section>
-						<p>最近は関数型プログラミングの流行っている</p>
 						<P>ラムダ式、簡単に言うと名前のない関数</P>
-						<div class="flex">
 						<pre><code>
 							引数 -> 処理
 						</code></pre>
@@ -362,7 +357,6 @@
 							val array = arrayOf(1,2,3)
 							array.forEach({num -> println(num)})
 						</code></pre>
-						</div>
 					</section>
 					<section>
 						<p>ラムダ関数に着目</p>
@@ -377,23 +371,35 @@
 						<pre><code>array.forEach{println(it)}</code></pre>
 					</section>
 					<section>
+						<p>クラス</p>
 						<pre><code>
 							//クラス
-							class クラス名 : 継承元クラス名{
+							class クラス名(){
 								プロパティ
 								メソッド
 							}
-							//インスタンス化
-							val 定数名 = クラス名()
-							//クラス内のメソッドの実行
-							定数名.メソッド名()
 						</code></pre>
 						<p>クラスはメソッドとプロパティ(関数と変数や定数)をひとまとめにしたもの</p>
 					</section>
 					<section>
+						<p>クラスの継承</p>
+						<pre><code>
+							class クラス名 : 継承元クラス名(){
+								プロパティ
+								メソッド
+							}
+
+							//インスタンス化
+							val 定数名 = クラス名()
+
+							//クラス内のメソッドの実行
+							定数名.メソッド名()
+						</code></pre>
+					</section>
+					<section>
 						<p>一般的には、以下のように使う</p>
 						<pre><code>
-							class a :b{
+							class a :b(){
 								override fun bfun(num: Int?){
 									super.bfun()
 								}
@@ -401,16 +407,6 @@
 						</code></pre>
 						<p>override: 親クラスのメソッドを上書き</p>
 						<p>super.メソッド: 親クラスのメソッドを使用</p>
-					</section>
-					<section>
-						<div class="flex">
-							<pre><code>
-
-							</code></pre>
-							<pre><code>
-
-							</code></pre>
-						</div>
 					</section>
 					<section>
 						<p>細かい文法は沢山あります</p>
@@ -430,11 +426,11 @@
 					</section>
 					<section>
 						<p>アプリ全体の設定</p>
-						<p>app>src>main>resAndroidManifest.xml</p>
+						<p>app>src>main>res>AndroidManifest.xml</p>
 					</section>
 					<section>
-						<p>インターフェイス</p>
-						<p>app>src>main>>res>layout>activity_main.xml</p>
+						<p>UI</p>
+						<p>app>src>main>res>layout>activity_main.xml</p>
 					</section>
 					<section>
 						<p>文字列の保管場所</p>
@@ -445,7 +441,7 @@
 
 				<section>
 					<section>
-						<h2>再び実際にアプリを作ってみましょう</h2>
+						<h2>再び実際にアプリを<br>作ってみましょう</h2>
 					</section>
 				</section>
 
@@ -531,7 +527,6 @@
 						<img src="images/41.png" alt="" srcset="">
 					</section>
 				</section>
-				<section></section>
 				<section>
 					<p>著作権表示</p>
 					<ul>
